--- a/package.json
+++ b/package.json
@@ -34,9 +34,14 @@
     "@cloudant/cloudant": "^2.3.0",
     "body-parser": "^1.18.3",
     "box-node-sdk": "^1.20.0",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "morgan": "^1.9.0",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "nodemailer": "^4.6.8",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
